<resources>
    <string name="app_name">MySharedPreferences</string>

    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="phone_no">Phone Number</string>
    <string name="age">Age</string>

    <string name="love_manchester_united">Love Manchester United?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>